--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,23 @@
 <html>
+  <body>
+  <header>
+    <p>hobbies</p>
+  </header>
   <head>
-    <title></title>
+    <title><h1>My Hobbies</h1></title>
+    
   </head>
+  
+  
+    <article>
+      <p>I like:</p>
+      <ul>
+        <li>Computer Programming</li>
+        <li>Swimming</li>
+        <li>Countryside musics</li>
+        <li>Playing the guitar</li>
+      </ul>
+    </article>
+
+</body>
 </html>
