--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,9 @@
     <table width='100%' border=1px cellspacing=0>
     <caption>Gallery of Pictures</caption>
     <tr>
-     <th><img height=120 width= 200 src="https://en.wikipedia.org/wiki/File:Pudel_kleinweiss.jpg"></th>
-     <th><img height=120 width= 200 src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/USS_Lexington.jpg/300px-USS_Lexington.jpg"></th>
-     <th><img height=120 width= 200 src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG/220px-%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG"></th>
+     <td><img height=120 width= 200 src="https://en.wikipedia.org/wiki/File:Pudel_kleinweiss.jpg"></td>
+     <td><img height=120 width= 200 src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/USS_Lexington.jpg/300px-USS_Lexington.jpg"></td>
+     <td><img height=120 width= 200 src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG/220px-%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG"></td>
       </tr>
      <tr>
       <td><img height=120 width= 200 src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG/220px-%D0%9D%D0%B0%D0%BD%D0%BA%D0%B8%D0%BD%D0%B3-%D0%BA%D0%B0%D0%BF%D0%B8%D1%98%D0%B0.JPG"></td>
