--- a/todolist.html
+++ b/todolist.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <ul>
-   <li class="p1 done">Computer Science homework</li>
+   <li class="done">Computer Science homework</li>
    <li class="p1">Maths homework</li>
    <li class="p2 done">do the landury</li>
    <li class="p2">Clean the room</li>
