--- a/todolist.html
+++ b/todolist.html
@@ -7,15 +7,18 @@
       }
       .p2 {
          color: orange;
+      }
       .p3 {
          color: grey;
+      }
       .done {
           text-decoration: line-through;
+      }
     </style>
 </head>
 <body>
 <ul>
-   <li class="done">Computer Science homework</li>
+   <li class="p1 done">Computer Science homework</li>
    <li class="p1">Maths homework</li>
    <li class="p2 done">do the landury</li>
    <li class="p2">Clean the room</li>
