--- a/todolist.html
+++ b/todolist.html
@@ -3,26 +3,52 @@
 <head>
     <style>
       .p1 {
-         color: red;
+         background-color:red;
+         color:white;
       }
       .p2 {
-         color: orange;
+         background-color: orange;
+         color:red;
       }
       .p3 {
-         color: grey;
+         background-color: grey;
       }
       .done {
+          background-color:black;
+          color:blue;
           text-decoration: line-through;
       }
     </style>
 </head>
 <body>
-<ul>
-   <li class="p1 done">Computer Science homework</li>
-   <li class="p1">Maths homework</li>
-   <li class="p2 done">do the landury</li>
-   <li class="p2">Clean the room</li>
-   <li class="p3">Shopping trip to Walmart</li>
+<ul class="p1">
+   <h1>High</h1>
+   <li>Computer Science homework</li>
+   <li>Maths homework</li>
+    <li>Computer Science homework</li>
+    <li>Computer Science homework</li>
+</ul>
+<p></p>
+<ul class="p2">
+    <h1>medium></h1>
+   <li>do the landury</li>
+   <li>Clean the room</li>
+   <li>Clean the room</li>
+   <li>Clean the room</li>
+<p></p>
+</ul class="p3">
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
+</ul> 
+<p>
+</p>
+</ul class="done">
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart</li>
 </ul> 
 
 </body>
