--- a/todolist.html
+++ b/todolist.html
@@ -11,7 +11,7 @@
          color:red;
       }
       .p3 {
-         background-color: grey;
+         background-color: gray;
       }
       .done {
           background-color:black;
