--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ sec
   <a href="todolist.html">todolist</a>
 </nav>
 <section id="sec1">
-  <img src="430506_196029407172365_1548467214_n.jpg" height="50">
+  <img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/304958_282799381825665_351527353_n.jpg?oh=acf481db037e1f1bb8e172cca6442fa0&oe=56A6519E" height="50">
   <h3><b>Hantao Jiang</b></h3>
   <p>21, Luther College Student, majored in Computer</p>
 </section>
