--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ sec
   <h3><b>Hantao Jiang</b></h3>
   <p>21, Luther College Student, majored in Computer</p>
 </section>
-<section id="sec:2">
+<section id="sec2">
 <p>I like photographing, computer programming and jogging.</p>  
 </section>
 
