--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       height: 20px;
   }
 #sec1 {
-  position: fixed;
+  position: realtive;
   background-color: red;
   height:200px;
   width:50%;
   float:left;
 }
 #sec2 {
-  position: fixed;
+  position: relative;
   background-color: blue;
   height:200px;
   width:50%;
@@ -41,6 +41,7 @@ sec
   <img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/304958_282799381825665_351527353_n.jpg?oh=acf481db037e1f1bb8e172cca6442fa0&oe=56A6519E" height="50">
   <h3><b>Hantao Jiang</b></h3>
   <p>21, Luther College Student, majored in Computer</p>
+
 </section>
 <section id="sec2">
 <p>I like photographing, computer programming and jogging.</p>  
@@ -50,6 +51,7 @@ sec
   <h1>Assignment</h1>
 </article>
 </body>
+
 <footer>
 Copyright Area, Contact Us.
 </footer>
