--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       height: 20px;
   }
 #sec1 {
-  position: realtive;
+  position: relative;
   background-color: red;
   height:200px;
   width:50%;
