--- a/todolist.html
+++ b/todolist.html
@@ -3,53 +3,70 @@
 <head>
     <style>
       .p1 {
+         position:relative;
+         float:left;
          background-color:red;
-         color:white;
       }
       .p2 {
+         position:relative;
+         float:left;
          background-color: orange;
-         color:red;
       }
       .p3 {
+         position:relative;
+         float:left;
          background-color: gray;
       }
       .done {
+          position:relative;
+          float:left;
           background-color:black;
-          color:blue;
+          color:white;
           text-decoration: line-through;
       }
     </style>
 </head>
 <body>
-<ul class="p1">
+<section class="p1">
+<h2>Most Important</h2>
+<ul>
    <h1>High</h1>
    <li>Computer Science homework</li>
    <li>Maths homework</li>
     <li>Computer Science homework</li>
     <li>Computer Science homework</li>
 </ul>
+</section>
 <p></p>
-<ul class="p2">
+<section class="p2">
+<h2>second Important</h2>
+<ul>
     <h1>medium></h1>
    <li>do the landury</li>
    <li>Clean the room</li>
    <li>Clean the room</li>
    <li>Clean the room</li>
+</section>
 <p></p>
-</ul class="p3">
+<section class="p3">
+<h2>Least Important</h2>
+<ul>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
 </ul> 
+</section>
 <p>
 </p>
-</ul class="done">
+<section class="done">
+<h2>Done</h2>
+</ul>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
    <li>Shopping trip to Walmart</li>
 </ul> 
-
+</section>
 </body>
 </html>
