--- a/todolist.html
+++ b/todolist.html
@@ -3,21 +3,29 @@
 <head>
     <style>
       .p1 {
+         height:500px;
+         width:400px;
          position:relative;
          float:left;
          background-color:red;
       }
       .p2 {
+         height:500px;
+         width:400px;
          position:relative;
          float:left;
          background-color: orange;
       }
       .p3 {
+         height:500px;
+         width:400px;
          position:relative;
          float:left;
          background-color: gray;
       }
       .done {
+          height:500px;
+          width:400px;
           position:relative;
           float:left;
           background-color:black;
@@ -30,7 +38,7 @@
 <section class="p1">
 <h2>Most Important</h2>
 <ul>
-   <h1>High</h1>
+
    <li>Computer Science homework</li>
    <li>Maths homework</li>
     <li>Computer Science homework</li>
@@ -41,7 +49,7 @@
 <section class="p2">
 <h2>second Important</h2>
 <ul>
-    <h1>medium></h1>
+
    <li>do the landury</li>
    <li>Clean the room</li>
    <li>Clean the room</li>
