--- a/todolist.html
+++ b/todolist.html
@@ -39,10 +39,10 @@
 <h2>Most Important</h2>
 <ul>
 
-   <li>Computer Science homework</li>
-   <li>Maths homework</li>
-    <li>Computer Science homework</li>
-    <li>Computer Science homework</li>
+   <li>Computer Science homework<input type="checkbox" name="group1" value="done"></li>
+   <li>Maths homework<input type="checkbox" name="group1" value="done"></li>
+   <li>Computer Science homework<input type="checkbox" name="group1" value="done"></li>
+    <li>Computer Science homework<input type="checkbox" name="group1" value="done"></li>
 </ul>
 </section>
 <p></p>
@@ -50,19 +50,19 @@
 <h2>second Important</h2>
 <ul>
 
-   <li>do the landury</li>
-   <li>Clean the room</li>
-   <li>Clean the room</li>
-   <li>Clean the room</li>
+   <li>do the landury<input type="checkbox" name="group1" value="done"></li>
+   <li>Clean the room<input type="checkbox" name="group1" value="done"></li>
+   <li>Clean the room<input type="checkbox" name="group1" value="done"></li>
+   <li>Clean the room<input type="checkbox" name="group1" value="done"></li>
 </section>
 <p></p>
 <section class="p3">
 <h2>Least Important</h2>
 <ul>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
 </ul> 
 </section>
 <p>
@@ -70,10 +70,10 @@
 <section class="done">
 <h2>Done</h2>
 </ul>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
-   <li>Shopping trip to Walmart</li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
+   <li>Shopping trip to Walmart<input type="checkbox" name="group1" value="done"></li>
 </ul> 
 </section>
 </body>
