--- a/finalapplication.html
+++ b/finalapplication.html
@@ -1,1 +1,19 @@
-
+<html>
+  <header>
+    <center>
+    <h1>Busy Busy</h1>
+    </center>
+  </header>
+  <body>
+    <section>
+      <h5>Enter Task</h5>
+      <input type="text" value="changeme" size="40">
+      <select id="priority">
+        <option>High</option>
+        <option>Medium</option>
+        <option>low</option>
+      </select>
+      <button>new</button>
+    </section>
+  </body>
+</html>
