--- a/finalapplication.html
+++ b/finalapplication.html
@@ -6,14 +6,21 @@
   </header>
   <body>
     <section>
-      <h5>Enter Task</h5>
-      <input type="text" value="changeme" size="40">
+      <label for="todo">Enter Task</label>
+      <input type="text" id="todo" value="changeme" size="40">
       <select id="priority">
         <option>High</option>
         <option>Medium</option>
         <option>low</option>
       </select>
-      <button>new</button>
+      <button onclick="post();">New</button>
+
+      <script>
+        changeColor = post() {
+        
+          
+        }
+      </script>
     </section>
   </body>
 </html>
