--- a/finalapplication.html
+++ b/finalapplication.html
@@ -27,7 +27,9 @@
         var node = document.createTextNode(written);
         Lis.appendChild(chose);
         Lis.appendChild(node);
+        
         }
+    </script>    
   </section>
   </body>
 </html>
