--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <a href="hobby.html">Hobby</a>
   <a href="gallery.html">Gallery</a>
   <a href="todolist.html">todolist</a>
+  <a href="finalapplication.html">final application</a>
 </nav>
 <section id="sec1">
   <img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/304958_282799381825665_351527353_n.jpg?oh=acf481db037e1f1bb8e172cca6442fa0&oe=56A6519E" height="50">
