--- a/finalapplication.html
+++ b/finalapplication.html
@@ -19,7 +19,7 @@
              width: 100%;
          }
         #done {
-            <script typ="text/javascript" src="http://bnmetp.github.io/CS130/listsaver.js"></script>
+            <script typ="text/javascript" src="http://bnmnetp.github.io/CS130/listsaver.js"></script>
             localSave(section2)
             restoreList(section2, doneTask)
         }
