--- a/finalapplication.html
+++ b/finalapplication.html
@@ -56,11 +56,12 @@
         Lis.appendChild(whetherdone);
         var element= document.querySelector('section2');
         section2.appendChild(Lis);
-        <script typ="text/javascript" src="http://bnmnetp.github.io/CS130/listsaver.js"></script>
-
+        localSave(section2);
+        
     }
     
 </script>
+<script typ="text/javascript" src="http://bnmnetp.github.io/CS130/listsaver.js"></script>
 <script>
     doneTask = function(){
         if (this.checked){
