--- a/finalapplication.html
+++ b/finalapplication.html
@@ -68,6 +68,7 @@
             this.parentNode.classList.add("done");
         } else{
             this.parentNode.classList.remove("done");
+            localSave(section2);
         }
     }
 </script>
