--- a/finalapplication.html
+++ b/finalapplication.html
@@ -78,6 +78,6 @@ localSave(section2);
 
 </body>
 <script type="text/javascript">
-    window.onload = function() {retoreList ("tasklist", doneTask) }
+    window.onload = function() {retoreList ("section2", doneTask) }
 </script>
 </html>
