--- a/finalapplication.html
+++ b/finalapplication.html
@@ -79,6 +79,6 @@
 
 </body>
 <script type="text/javascript">
-    window.onload = function() {retoreList ("section2", doneTask) };
+    window.onload = function() {restoreList ("section2", doneTask) };
 </script>
 </html>
